test/testData/parser/negative/expressions/unassignableArgs.err
test/testData/parser/negative/expressions/unassignableArgs.c:11:3: error: variable has incomplete type 'STRUCT S1'
test/testData/parser/negative/expressions/unassignableArgs.c:12:3: error: variable has incomplete type 'STRUCT S2'
test/testData/parser/negative/expressions/unassignableArgs.c:15:7: warning: incompatible integer to pointer conversion assigning to '*signed int' from 'signed int'
test/testData/parser/negative/expressions/unassignableArgs.c:15:10: warning: incompatible integer to pointer conversion assigning to '*signed int' from 'signed int'
test/testData/parser/negative/expressions/unassignableArgs.c:16:7: error: assigning to '*signed int' from incompatible type 'float'
test/testData/parser/negative/expressions/unassignableArgs.c:17:11: error: assigning to '*signed int' from incompatible type 'float'
test/testData/parser/negative/expressions/unassignableArgs.c:19:8: warning: incompatible pointer types assigning to '*signed int' from '*float'
test/testData/parser/negative/expressions/unassignableArgs.c:19:12: warning: incompatible pointer types assigning to '*signed int' from '*float'
test/testData/parser/negative/expressions/unassignableArgs.c:23:8: warning: incompatible pointer types assigning to '*signed int' from '*ERROR TYPE'
test/testData/parser/negative/expressions/unassignableArgs.c:23:13: warning: incompatible pointer types assigning to '*signed int' from '*ERROR TYPE'
test/testData/parser/negative/expressions/unassignableArgs.c:24:8: warning: incompatible pointer types assigning to '*signed int' from '*ERROR TYPE'
test/testData/parser/negative/expressions/unassignableArgs.c:24:13: warning: incompatible pointer types assigning to '*signed int' from '*ERROR TYPE'
test/testData/parser/negative/expressions/unassignableArgs.c:27:7: error: assigning to 'STRUCT S1' from incompatible type 'float'
test/testData/parser/negative/expressions/unassignableArgs.c:28:7: error: assigning to 'STRUCT S1' from incompatible type 'signed int'
test/testData/parser/negative/expressions/unassignableArgs.c:29:8: error: assigning to 'STRUCT S1' from incompatible type '*signed int'
test/testData/parser/negative/expressions/unassignableArgs.c:30:8: error: assigning to 'STRUCT S1' from incompatible type '*float'
test/testData/parser/negative/expressions/unassignableArgs.c:34:8: error: assigning to 'STRUCT S1' from incompatible type '*ERROR TYPE'
test/testData/parser/negative/expressions/unassignableArgs.c:35:8: error: assigning to 'STRUCT S1' from incompatible type '*ERROR TYPE'
test/testData/parser/negative/expressions/unassignableArgs.c:36:8: error: assigning to 'STRUCT S1' from incompatible type '*ERROR TYPE'
test/testData/parser/negative/expressions/unassignableArgs.c:37:8: error: assigning to 'STRUCT S1' from incompatible type 'C *{signed int (*signed int, *signed int)}'
test/testData/parser/negative/expressions/unassignableArgs.c:39:7: error: assigning to 'STRUCT S1' from incompatible type 'signed int[20]'
